force-app/main/default/objects/Placement_Forecast_Split__c/Placement_Forecast_Split__c.object-meta.xml
<CustomObject>
    <label>Placement Forecast Split</label>
    <nameField>
        <label>Placement Forecast Split Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Placement Forecast Splits</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>