force-app/main/default/objects/Placement_Forecast_Split__c/fields/Active_At_beginning_Of_Month__c.field-meta.xml
<CustomField>
    <fullName>Active_At_beginning_Of_Month__c</fullName>
    <formula>AND(Date(year(Start_Date__c),Month(Start_Date__c),1)&gt; Placement__r.First_Working_Day__c, 
Date(year(Start_Date__c),Month(Start_Date__c),1)&lt;= Placement__r.Last_Working_Day__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Active At Beginning of Month</label>
    <type>Checkbox</type>
</CustomField>