force-app/main/default/objects/Placement_Forecast_Split__c/fields/All_in_This_Split__c.field-meta.xml
<CustomField>
    <fullName>All_in_This_Split__c</fullName>
    <formula>End_Date__c -  Start_Date__c &gt;=3</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>All in This Split?</label>
    <type>Checkbox</type>
</CustomField>