force-app/main/default/objects/Placement_Forecast_Split__c/fields/Hourly_Customer_Rate__c.field-meta.xml
<CustomField>
    <fullName>Hourly_Customer_Rate__c</fullName>
    <formula>Placement_Forecast__r.Manual_Hourly_Customer_Rate__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Hourly Customer Rate(Split)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>