force-app/main/default/objects/Placement_Forecast_Split__c/fields/Hourly_Talent_Rate__c.field-meta.xml
<CustomField>
    <fullName>Hourly_Talent_Rate__c</fullName>
    <formula>IF( AND(Placement__r.For_Internal_Placement__c ,  
$Profile.Name != &apos;System Administrator&apos; , $User.Torc_Admin__c!=TRUE

),
0,
Placement_Forecast__r.Manual_Hourly_Talent_Rate__c
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Hourly Talent Rate(Split)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>