force-app/main/default/objects/Placement_Forecast_Split__c/fields/Hours__c.field-meta.xml
<CustomField>
    <fullName>Hours__c</fullName>
    <formula>IF( All_in_This_Split__c ,Placement_Forecast__r.Manually_Forecasted_Hours__c,0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Split&apos;s Hours</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>