force-app/main/default/objects/Placement_Forecast_Split__c/fields/Last_Day_Of_Month__c.field-meta.xml
<CustomField>
    <fullName>Last_Day_Of_Month__c</fullName>
    <formula>IF(MONTH(End_Date__c)=12, DATE(YEAR(End_Date__c),12,31),DATE( Year(End_Date__c),Month(End_Date__c)+1,1)-1)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Last Day Of Month</label>
    <type>Date</type>
</CustomField>