force-app/main/default/objects/Placement_Forecast_Split__c/fields/Placement__c.field-meta.xml
<CustomField>
    <fullName>Placement__c</fullName>
    <label>Placement</label>
    <referenceTo>Placement__c</referenceTo>
    <relationshipLabel>Placement Forecast Splits</relationshipLabel>
    <relationshipName>Placement_Forecast_Splits</relationshipName>
    <relationshipOrder>1</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>