force-app/main/default/objects/Placement_Forecast_Split__c/fields/Placement_Forecast__c.field-meta.xml
<CustomField>
    <fullName>Placement_Forecast__c</fullName>
    <label>Placement Forecast</label>
    <referenceTo>Placement_Forecast__c</referenceTo>
    <relationshipLabel>Placement Forecast Splits</relationshipLabel>
    <relationshipName>Placement_Forecast_Splits</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>