force-app/main/default/objects/Placement_Forecast_Split__c/fields/Placement_Monthly_Forecast__c.field-meta.xml
<CustomField>
    <fullName>Placement_Monthly_Forecast__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Placement Monthly Forecast</label>
    <referenceTo>Placement_Monthly_Forecast__c</referenceTo>
    <relationshipLabel>Placement Forecast Splits</relationshipLabel>
    <relationshipName>Placement_Forecast_Splits</relationshipName>
    <type>Lookup</type>
</CustomField>