force-app/main/default/objects/Placement_Forecast_Split__c/fields/Planned_Referral_Amount__c.field-meta.xml
<CustomField>
    <fullName>Planned_Referral_Amount__c</fullName>
    <formula>IF(
AND(
Placement__r.Torc_User__r.Referrer__c&lt;&gt;NULL,
ADDMonthS(Placement__r.Placed_User_Created_At__c,12) &gt;  Start_Date__c), 
Split_Talent_Rate__c/100.0 , 0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Planned Referral Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>