force-app/main/default/objects/Placement_Forecast_Split__c/fields/Referrer_Name__c.field-meta.xml
<CustomField>
    <fullName>Referrer_Name__c</fullName>
    <formula>Placement__r.Referrer_Name__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Referrer Name</label>
    <type>Text</type>
</CustomField>