force-app/main/default/objects/Placement_Forecast_Split__c/fields/Right_Month_Setup__c.field-meta.xml
<CustomField>
    <fullName>Right_Month_Setup__c</fullName>
    <formula>MONTH(Start_Date__c) = MONTH(Placement_Monthly_Forecast__r.Start_Date__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Right Month Setup?</label>
    <type>Checkbox</type>
</CustomField>