force-app/main/default/objects/Placement_Forecast_Split__c/fields/Situation__c.field-meta.xml
<CustomField>
    <fullName>Situation__c</fullName>
    <formula>IF(AND(Placement__r.First_Working_Day__c&lt;= Last_Day_Of_Month__c,Placement__r.Last_Working_Day__c&gt;=(Date(year(End_Date__c),Month(End_Date__c),1))),
    IF(AND(Placement__r.First_Working_Day__c&gt;=(Date(year(End_Date__c),Month(End_Date__c),1)),Placement__r.Last_Working_Day__c&lt;= Last_Day_Of_Month__c),
        &apos;TEMPORARY&apos;,
        IF(AND(Placement__r.First_Working_Day__c&gt;=(Date(year(End_Date__c),Month(End_Date__c),1)),Placement__r.First_Working_Day__c&lt;= Last_Day_Of_Month__c),
            &apos;NEW&apos;,
            IF(AND(Placement__r.Last_Working_Day__c&gt;=(Date(year(End_Date__c),Month(End_Date__c),1)),Placement__r.Last_Working_Day__c&lt;= Last_Day_Of_Month__c),
                &apos;CHURN&apos;,
                &apos;CONTINUE&apos;
            )
        )
    ),
    &apos;INACTIVE&apos;
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Situation</label>
    <type>Text</type>
</CustomField>