force-app/main/default/objects/Placement_Forecast_Split__c/fields/Split_Customer_Rate__c.field-meta.xml
<CustomField>
    <fullName>Split_Customer_Rate__c</fullName>
    <formula>Hours__c *  Hourly_Customer_Rate__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Split Customer Rate</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>