force-app/main/default/objects/Placement_Forecast_Split__c/fields/Split_Direct_revenue_Only__c.field-meta.xml
<CustomField>
    <fullName>Split_Direct_revenue_Only__c</fullName>
    <formula>IF( All_in_This_Split__c ,Placement_Forecast__r.Direct_Revenue_Only__c,0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Split Direct revenue Only</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>