force-app/main/default/objects/Placement_Forecast_Split__c/fields/Split_Total_revenue__c.field-meta.xml
<CustomField>
    <fullName>Split_Total_revenue__c</fullName>
    <formula>Split_Direct_revenue_Only__c + Split_Customer_Rate__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Split Total Revenue</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>