force-app/main/default/objects/Placement_Forecast_Split__c/fields/Use_Split_For_Forecast__c.field-meta.xml
<CustomField>
    <fullName>Use_Split_For_Forecast__c</fullName>
    <formula>OR(AND(All_in_This_Split__c =TRUE,  
OR(Hours__c &lt;&gt;0,  Split_Direct_revenue_Only__c &lt;&gt;0)
),

AND(All_in_This_Split__c =FALSE, 
OR(AND(Placement__r.First_Working_Day__c &gt;=Start_Date__c, Placement__r.First_Working_Day__c&lt;=End_Date__c),
AND(Placement__r.Last_Working_Day__c &gt;=Start_Date__c, Placement__r.Last_Working_Day__c&lt;=End_Date__c))
)
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Use Split For Forecast</label>
    <type>Checkbox</type>
</CustomField>